--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="border-bottom">
           <div class="center border-side">
             <div class="hamburger"><a href="" title="메뉴 바로가기"><i class="ri-menu-line"></i></a></div>
-            <div class="logo"><a href="" title="안심이">서울특별시 안심이</a></div>
+            <div class="logo"><a href="" title="안심이">서울특별시 안심택배함</a></div>
             <div class="back"><a href="" title="뒤로가기"><i class="ri-arrow-go-back-line"></i></a></div>
           </div>
         </header>
@@ -32,7 +32,7 @@
               <div class="icon">
                 <i class="ri-camera-2-fill"></i>
               </div>
-              <h3>당신의 귀가를 <br>더욱 안전하게!</h3>
+              <h3>당신의 택배를 <br>더욱 안전하게!</h3>
             </div>
           </div>
         </section>
@@ -49,10 +49,10 @@
           </div>
         </section>
         <!-- Fotter -->
-        <footer class="border-top">
+        <!-- <footer class="border-top">
           <div class="center border-side">
             <p>&copy; </p>
           </div>
-        </footer>
+        </footer> -->
 </body>
 </html>
